--- a/index.html
+++ b/index.html
@@ -186,7 +186,8 @@ section h2 {
 <body>
 
 <nav>
-  <div class="logo">NRC</div>
+  <a href="#home" class="logo">NRC</a>
+
   <ul>
     <li><a href="#about">About</a></li>
     <li><a href="#skills">Skills</a></li>
@@ -219,6 +220,58 @@ section h2 {
       <a href="#contact" class="btn-primary">Get In Touch</a>
       <a href="#experience" class="btn-secondary">View Experience ↓</a>
     </div>
+    <div class="flex justify-center gap-6 mt-12">
+
+  <!-- GitHub -->
+  <a href="https://github.com/nikhilreddy32" target="_blank"
+     class="w-12 h-12 flex items-center justify-center 
+            rounded-full border border-white/20 
+            text-gray-300 hover:text-white 
+            hover:border-blue-500 hover:shadow-lg hover:shadow-blue-500/30 
+            transition duration-300">
+
+    <!-- GitHub SVG -->
+    <svg xmlns="http://www.w3.org/2000/svg" 
+         fill="currentColor" 
+         viewBox="0 0 24 24" 
+         class="w-5 h-5">
+      <path d="M12 .5C5.73.5.5 5.73.5 12a11.5 11.5 0 008 10.93c.58.1.79-.25.79-.56v-2.17c-3.25.7-3.94-1.57-3.94-1.57-.53-1.35-1.3-1.7-1.3-1.7-1.07-.74.08-.72.08-.72 1.18.08 1.8 1.21 1.8 1.21 1.05 1.8 2.76 1.28 3.43.98.1-.76.41-1.28.75-1.57-2.6-.3-5.34-1.3-5.34-5.8 0-1.28.46-2.32 1.21-3.14-.12-.3-.53-1.52.12-3.16 0 0 .98-.31 3.2 1.2a11.2 11.2 0 015.83 0c2.22-1.51 3.2-1.2 3.2-1.2.65 1.64.24 2.86.12 3.16.75.82 1.21 1.86 1.21 3.14 0 4.52-2.75 5.5-5.37 5.8.42.36.8 1.08.8 2.17v3.22c0 .31.21.67.8.56A11.5 11.5 0 0023.5 12C23.5 5.73 18.27.5 12 .5z"/>
+    </svg>
+  </a>
+
+  <!-- LinkedIn -->
+  <a href="https://www.linkedin.com/in/nikhil-reddy-chintakunta-752546113/" target="_blank"
+     class="w-12 h-12 flex items-center justify-center 
+            rounded-full border border-white/20 
+            text-gray-300 hover:text-white 
+            hover:border-blue-500 hover:shadow-lg hover:shadow-blue-500/30 
+            transition duration-300">
+
+    <svg xmlns="http://www.w3.org/2000/svg" 
+         fill="currentColor" 
+         viewBox="0 0 24 24" 
+         class="w-5 h-5">
+      <path d="M4.98 3.5C4.98 4.88 3.87 6 2.49 6 1.12 6 0 4.88 0 3.5 0 2.12 1.12 1 2.49 1c1.38 0 2.49 1.12 2.49 2.5zM.22 8.5H4.8V24H.22V8.5zM7.5 8.5h4.4v2.1h.06c.61-1.16 2.1-2.38 4.33-2.38 4.63 0 5.48 3.05 5.48 7.01V24h-4.57v-7.4c0-1.77-.03-4.04-2.46-4.04-2.46 0-2.84 1.92-2.84 3.91V24H7.5V8.5z"/>
+    </svg>
+  </a>
+
+  <!-- Email -->
+  <a href="mailto:chinthakuntanikhilreddy@gmail.com"
+     class="w-12 h-12 flex items-center justify-center 
+            rounded-full border border-white/20 
+            text-gray-300 hover:text-white 
+            hover:border-blue-500 hover:shadow-lg hover:shadow-blue-500/30 
+            transition duration-300">
+
+    <svg xmlns="http://www.w3.org/2000/svg" 
+         fill="currentColor" 
+         viewBox="0 0 24 24" 
+         class="w-5 h-5">
+      <path d="M0 4v16h24V4H0zm22 2v.01L12 13 2 6.01V6h20zM2 18V8.24l10 6.99 10-6.99V18H2z"/>
+    </svg>
+  </a>
+
+</div>
   </div>
 </section>
 
