--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ section h2 {
 <body>
 
 <nav>
-  <a href="#home" class="logo">NRC</a>
+  <a href="hero-content" class="logo">NRC</a>
 
   <ul>
     <li><a href="#about">About</a></li>
@@ -273,6 +273,23 @@ section h2 {
 
 </div>
   </div>
+ <!-- arrow -->
+  <a href="#about"
+   class="absolute bottom-10 left-1/2 -translate-x-1/2 
+          animate-bounce text-gray-400 hover:text-white transition">
+
+  <svg xmlns="http://www.w3.org/2000/svg"
+       fill="none"
+       viewBox="0 0 24 24"
+       stroke="currentColor"
+       class="w-8 h-8">
+    <path stroke-linecap="round"
+          stroke-linejoin="round"
+          stroke-width="2"
+          d="M19 9l-7 7-7-7" />
+  </svg>
+
+</a>
 </section>
 
 <!-- SECTIONS FOR SCROLLING -->
