--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ section h2 {
 <body>
 
 <nav>
-  <a href="hero-content" class="logo">NRC</a>
+  <li><a href="hero" class="logo">NRC</a></li>
 
   <ul>
     <li><a href="#about">About</a></li>
@@ -200,7 +200,7 @@ section h2 {
 
 <!-- HERO -->
 
-<section class="hero">
+<section id="about" class="hero">
   <div class="hero-content">
     <h1>
       <span class="cream">Nikhil Reddy</span><br>
