--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ section h2 {
 <body>
 
 <nav>
-  <li><a href="hero" class="logo">NRC</a></li>
+  <a href="hero" class="logo">NRC</a>
 
   <ul>
     <li><a href="#about">About</a></li>
