--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ section h2 {
 
 <!-- HERO -->
 
-<section id="about" class="hero">
+<section id="hero" class="hero">
   <div class="hero-content">
     <h1>
       <span class="cream">Nikhil Reddy</span><br>
@@ -274,7 +274,7 @@ section h2 {
 </div>
   </div>
  <!-- arrow -->
-  <a href="#about"
+  <a href="about"
    class="absolute bottom-10 left-1/2 -translate-x-1/2 
           animate-bounce text-gray-400 hover:text-white transition">
 
@@ -385,7 +385,23 @@ section h2 {
       <h3 class="text-3xl font-bold">2M+</h3>
       <p class="text-gray-400 mt-2">Users Supported</p>
     </div>
+<!-- arrow -->
+  <a href="about"
+   class="absolute bottom-10 left-1/2 -translate-x-1/2 
+          animate-bounce text-gray-400 hover:text-white transition">
 
+  <svg xmlns="http://www.w3.org/2000/svg"
+       fill="none"
+       viewBox="0 0 24 24"
+       stroke="currentColor"
+       class="w-8 h-8">
+    <path stroke-linecap="round"
+          stroke-linejoin="round"
+          stroke-width="2"
+          d="M19 9l-7 7-7-7" />
+  </svg>
+
+</a>
   </div>
 
 </section>
@@ -609,6 +625,24 @@ section h2 {
   color: #3b82f6;
 }
 </style>
+
+  <!-- arrow -->
+  <a href="experience"
+   class="absolute bottom-10 left-1/2 -translate-x-1/2 
+          animate-bounce text-gray-400 hover:text-white transition">
+
+  <svg xmlns="http://www.w3.org/2000/svg"
+       fill="none"
+       viewBox="0 0 24 24"
+       stroke="currentColor"
+       class="w-8 h-8">
+    <path stroke-linecap="round"
+          stroke-linejoin="round"
+          stroke-width="2"
+          d="M19 9l-7 7-7-7" />
+  </svg>
+
+</a>
 </section>
 
 
@@ -665,7 +699,7 @@ section h2 {
       </ul>
 
     </div>
-
+   
     <!-- ===== EXPERIENCE 2 ===== -->
     <div class="exp-card">
 
