--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ section h2 {
 <body>
 
 <nav>
-  <a href="hero" class="logo">NRC</a>
+  <a href="#hero" class="logo">NRC</a>
 
   <ul>
     <li><a href="#about">About</a></li>
@@ -274,7 +274,7 @@ section h2 {
 </div>
   </div>
  <!-- arrow -->
-  <a href="about"
+  <a href="About"
    class="absolute bottom-10 left-1/2 -translate-x-1/2 
           animate-bounce text-gray-400 hover:text-white transition">
 
@@ -296,7 +296,7 @@ section h2 {
 
 
 <!-- ABOUT -->
-<section id="about" class="py-28 px-6 text-center">
+<section id="About" class="py-28 px-6 text-center">
 
   <!-- Section Label -->
   <p class="text-blue-500 tracking-widest font-semibold mb-4">
