--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@ section h2 {
 </div>
   </div>
  <!-- arrow -->
-  <a href="About"
+  <a href="#About"
    class="absolute bottom-10 left-1/2 -translate-x-1/2 
           animate-bounce text-gray-400 hover:text-white transition">
 
@@ -385,23 +385,7 @@ section h2 {
       <h3 class="text-3xl font-bold">2M+</h3>
       <p class="text-gray-400 mt-2">Users Supported</p>
     </div>
-<!-- arrow -->
-  <a href="about"
-   class="absolute bottom-10 left-1/2 -translate-x-1/2 
-          animate-bounce text-gray-400 hover:text-white transition">
 
-  <svg xmlns="http://www.w3.org/2000/svg"
-       fill="none"
-       viewBox="0 0 24 24"
-       stroke="currentColor"
-       class="w-8 h-8">
-    <path stroke-linecap="round"
-          stroke-linejoin="round"
-          stroke-width="2"
-          d="M19 9l-7 7-7-7" />
-  </svg>
-
-</a>
   </div>
 
 </section>
@@ -627,7 +611,7 @@ section h2 {
 </style>
 
   <!-- arrow -->
-  <a href="experience"
+  <a href="#experience"
    class="absolute bottom-10 left-1/2 -translate-x-1/2 
           animate-bounce text-gray-400 hover:text-white transition">
 
@@ -797,6 +781,7 @@ section h2 {
   left: 0;
   color: #3b82f6;
 }
+  
 </style>
 <!-- PROJECTS -->
 <section id="projects" class="py-28 px-6 text-center">
